test/files_test/errors/lambda_missing_args.scm
; Test: Lambda with missing args list - should return exit code 84
(lambda)
